Adds delete favorite, update user, user alerting hour, and user notify preference
