# server/api/services/users.service.ts
@@ -5,6 +5,8 @@ import uuid from 'uuid';
 export interface User {
   id: string;
   name: string;
+  alert: number;
+  notify: boolean;
 }
 
 export class UsersService {
@@ -16,7 +18,7 @@ export class UsersService {
   async byId(id: string): Promise<User> {
     L.info(`fetch user with id ${id}`);
     const r = await this.all();
-    return r.find((user) => user.id == id);
+    return r.find((user) => user.id === id);
   }
 
   async create(name: string): Promise<User> {
@@ -24,9 +26,22 @@ export class UsersService {
     const user: User = {
       id: uuid.v4(),
       name,
+      alert: 8, // default to 8am
+      notify: true,
     };
     data.users.push(user);
     return Promise.resolve(user);
+  }
+
+  async update(id: string, name?: string, alert?: number, notify?: boolean): Promise<User> {
+    L.info(`update user with id ${id}`);
+    const user = await this.byId(id);
+    if (user) {
+      if (name) user.name = name;
+      if (alert) user.alert = alert;
+      if (notify !== undefined) user.notify = notify;
+    }
+    return user;
   }
 }
 
